--- a/views/tanks/list.ejs
+++ b/views/tanks/list.ejs
@@ -46,6 +46,8 @@
 		<% return 'Poland' %>
 	<% } else if (n == 'czech'){ %>
 		<% return 'Czech' %>		
+	<% } else if (n == 'italy'){ %>
+		<% return 'Italy' %>		
 	<% } else if (n == 'merc'){ %>
 		<% return 'Mercenary' %>
 	<% } %>
