changed player pages button format for mobile

--- a/views/players/career-stats.ejs
+++ b/views/players/career-stats.ejs
@@ -19,7 +19,7 @@
     <input type="hidden" name="player" value="<%= player.nickname %>" />
     <input
       type="submit"
-      value="My Recently Played Vehicles"
+      value="Recent Vehicles"
       class="waves-effect waves-light btn"
     />
   </form>
@@ -31,7 +31,7 @@
     <input type="hidden" name="player" value="<%= player.nickname %>" />
     <input
       type="submit"
-      value="My Current Grind List"
+      value="Current Grind"
       class="waves-effect waves-light btn"
     />
   </form>
