--- a/views/players/current-grind.ejs
+++ b/views/players/current-grind.ejs
@@ -15,11 +15,11 @@
 
   <form action="/players/account/<%= player.account_id %>/recent-vehicles" method="GET">
     <input type="hidden" name="player" value="<%= player.nickname %>">
-    <input type="submit" value="Recently Played Vehicles" class="waves-effect waves-light btn">
+    <input type="submit" value="Recent Vehicles" class="waves-effect waves-light btn">
 	</form>
 	
 	<form>
-		<input type="submit" value="Current Grind List" class="waves-effect waves-light btn disabled-btn">
+		<input type="submit" value="Current Grind" class="waves-effect waves-light btn disabled-btn">
 	</form>
 
 </div>
