--- a/static/style.css
+++ b/static/style.css
@@ -184,7 +184,23 @@ nav .brand-logo.right {
 .disabled-btn {
   background-color: #2e86c1 !important;
   color: #000545 !important;
-  width: 23vw;
+  width: 24vw;
+}
+
+@media (max-width: 900px) {
+  .disabled-btn,
+  .btn {
+    width: 30vw;
+    font-size: 10px;
+    margin: 0;
+    padding: 0;
+  }
+
+  /* .waves-effect input[type="submit"] {
+    padding: 0;
+    margin: 0;
+    width: 30vw;
+  } */
 }
 
 input.waves-button-input {
