--- a/views/players/recent-vehicles.ejs
+++ b/views/players/recent-vehicles.ejs
@@ -14,12 +14,12 @@
 	</form>
 
 	<form>
-		<input type="submit" value="Recently Played Vehicles" class="waves-effect waves-light btn disabled-btn">
+		<input type="submit" value="Recent Vehicles" class="waves-effect waves-light btn disabled-btn">
 	</form>
 
 	<form action="/players/account/<%= player.account_id %>/current-grind" method="GET">
 		<input type="hidden" name="player" value="<%= player.nickname %>">
-		<input type="submit" value="Current Grind List" class="waves-effect waves-light btn">
+		<input type="submit" value="Current Grind" class="waves-effect waves-light btn">
 	</form>
 
 </div>
